Add movies in main content, add some images, add styling for movie component
There are some problems with rating and lenght/width of the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
 
+    <!-- NAV-BAR -->
     <div id="top-nav-bar">
       <div id="logo-top">LOGO</div>
       <div id="top-nav-body">
@@ -18,18 +19,123 @@
       </div>
     </div>
 
+    <!-- SIDE MENU -->
     <div id="side-menu">
       <div class="menu-list">
         <div class="menu-voice active">Home</div>
         <div class="menu-voice">Preferiti</div>
         <div class="menu-voice">Profilo</div>
       </div>
+      <hr>
     </div>
 
+    <!-- MAIN CONTENT -->
     <div id="content-view">
-      Content
+      <h2 id="content-title">New Releases</h2>
+      <div class="row">
+        <div class="col-1">
+          <div id="movie1" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
+            <h3 class="movie-title">Game of Throns</h3>
+            <p class="movie-category">Morte, Sesso, Draghi</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie2" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie2.jpg" alt="movie 2"></a>
+            <h3 class="movie-title">Titanic</h3>
+            <p class="movie-category">Ghiaccio, Nave, Schettino</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie3" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie3.jpg" alt="movie 3"></a>
+            <h3 class="movie-title">Matrix</h3>
+            <p class="movie-category">Mr. Smith, Pillola Rossa o Pillola Blu?</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie4" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie4.jpg" alt="movie 4"></a>
+            <h3 class="movie-title">Interstellar</h3>
+            <p class="movie-category">TOP, TOPx2</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie5" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie5.jpg" alt="movie 5"></a>
+            <h3 class="movie-title">MR. ROBOT</h3>
+            <p class="movie-category">SUPER TOP, SUPER TOP x2</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <div id="movie6" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie6.jpg" alt="movie 6"></a>
+            <h3 class="movie-title">Breaking Bed</h3>
+            <p class="movie-category">Droga, CENDODIGIODDOOO</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie7" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie7.jpg" alt="movie 7"></a>
+            <h3 class="movie-title">Sherlock</h3>
+            <p class="movie-category">Investigatore, Drogato</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie8" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie8.jpg" alt="movie 8"></a>
+            <h3 class="movie-title">Ant-Man</h3>
+            <p class="movie-category">Formiche</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie9" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie9.jpg" alt="movie 9"></a>
+            <h3 class="movie-title">Terminator</h3>
+            <p class="movie-category">Robot, Metallo</p>
+          </div>
+        </div>
+
+        <div class="col-1">
+          <div id="movie10" class="cover-container">
+            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <a href="#"><img class="movie-image" src="img/movie10.jpg" alt="movie 10"></a>
+            <h3 class="movie-title">Justice League</h3>
+            <p class="movie-category">Non trovavo altre immagini, Jason Momoa</p>
+          </div>
+        </div>
+      </div>
     </div>
 
 
   </body>
 </html>
+
+
+
+<div id="movie1" class="cover-container">
+  <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+  <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
+  <h3 class="movie-title">Film Title</h3>
+  <p class="movie-category">Cat1, Cat2</p>
+</div>
