--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>MOVIENET</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
 
     <!-- NAV-BAR -->
     <div id="top-nav-bar">
-      <div id="logo-top">LOGO</div>
+      <div id="logo-top">MOVIENET</div>
       <div id="top-nav-body">
         <input type="text" id="nav-search" placeholder="Film title ...">
         <div class="user-profile-info">
@@ -22,20 +22,63 @@
     <!-- SIDE MENU -->
     <div id="side-menu">
       <div class="menu-list">
-        <div class="menu-voice active">Home</div>
-        <div class="menu-voice">Preferiti</div>
-        <div class="menu-voice">Profilo</div>
+        <div class="menu-voice active">New Releases</div>
+        <div class="menu-voice">Trending</div>
+        <div class="menu-voice">Coming Soon</div>
+        <div class="menu-voice">Favourites</div>
+        <div class="menu-voice">Watch Later</div>
       </div>
+
       <hr>
+
+      <!-- USERS ACTIVITIES -->
+      <div id="activities-container">
+        <div id="activity-title-container">
+          <h4 id="activity-title">Last Activity</h4>
+          <div id="activity-number-container"> <p id="number-activity">3</p> </div>
+        </div>
+
+        <!-- ACTIVITY 1-->
+        <!-- <div class="activity-container">
+          <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
+          <div class="activity-info">
+            <p class="user-nickname">User Nickname</p>
+            <p class="user-activity">wants to be your friend</p>
+            <p class="activity-time">32 minutes ago</p>
+          </div>
+        </div> -->
+
+        <!-- ACTIVITY 2-->
+        <!-- <div class="activity-container">
+          <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
+          <div class="activity-info">
+            <p class="user-nickname">User Nickname</p>
+            <p class="user-activity">has recommended you: <span class="activity-movie-title">Jurassic World</span> </p>
+            <p class="activity-time">13 hours ago</p>
+          </div>
+        </div> -->
+
+        <!-- ACTIVITY 3-->
+        <!-- <div class="activity-container">
+          <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
+          <div class="activity-info">
+            <p class="user-nickname">User Nickname</p>
+            <p class="user-activity">has recommended you <span class="activity-movie-title">Gravity</span> </p>
+            <p class="activity-time">32 minutes ago</p>
+          </div>
+        </div> -->
+
+      </div>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="content-view">
       <h2 id="content-title">New Releases</h2>
       <div class="row">
+
         <div class="col-1">
           <div id="movie1" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
             <h3 class="movie-title">Game of Throns</h3>
             <p class="movie-category">Morte, Sesso, Draghi</p>
@@ -44,7 +87,7 @@
 
         <div class="col-1">
           <div id="movie2" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">7.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie2.jpg" alt="movie 2"></a>
             <h3 class="movie-title">Titanic</h3>
             <p class="movie-category">Ghiaccio, Nave, Schettino</p>
@@ -53,7 +96,7 @@
 
         <div class="col-1">
           <div id="movie3" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie3.jpg" alt="movie 3"></a>
             <h3 class="movie-title">Matrix</h3>
             <p class="movie-category">Mr. Smith, Pillola Rossa o Pillola Blu?</p>
@@ -62,7 +105,7 @@
 
         <div class="col-1">
           <div id="movie4" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">9.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie4.jpg" alt="movie 4"></a>
             <h3 class="movie-title">Interstellar</h3>
             <p class="movie-category">TOP, TOPx2</p>
@@ -71,7 +114,7 @@
 
         <div class="col-1">
           <div id="movie5" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">9.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie5.jpg" alt="movie 5"></a>
             <h3 class="movie-title">MR. ROBOT</h3>
             <p class="movie-category">SUPER TOP, SUPER TOP x2</p>
@@ -82,7 +125,7 @@
       <div class="row">
         <div class="col-1">
           <div id="movie6" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">8.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie6.jpg" alt="movie 6"></a>
             <h3 class="movie-title">Breaking Bed</h3>
             <p class="movie-category">Droga, CENDODIGIODDOOO</p>
@@ -91,7 +134,7 @@
 
         <div class="col-1">
           <div id="movie7" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie7.jpg" alt="movie 7"></a>
             <h3 class="movie-title">Sherlock</h3>
             <p class="movie-category">Investigatore, Drogato</p>
@@ -100,7 +143,7 @@
 
         <div class="col-1">
           <div id="movie8" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">7.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie8.jpg" alt="movie 8"></a>
             <h3 class="movie-title">Ant-Man</h3>
             <p class="movie-category">Formiche</p>
@@ -109,7 +152,7 @@
 
         <div class="col-1">
           <div id="movie9" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">7.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie9.jpg" alt="movie 9"></a>
             <h3 class="movie-title">Terminator</h3>
             <p class="movie-category">Robot, Metallo</p>
@@ -118,24 +161,16 @@
 
         <div class="col-1">
           <div id="movie10" class="cover-container">
-            <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
+            <div class="movie-rating"><p class="rating-number">6.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie10.jpg" alt="movie 10"></a>
             <h3 class="movie-title">Justice League</h3>
             <p class="movie-category">Non trovavo altre immagini, Jason Momoa</p>
           </div>
         </div>
+
       </div>
     </div>
 
 
   </body>
 </html>
-
-
-
-<div id="movie1" class="cover-container">
-  <div class="movie-rating" style="background-color: #a5a512"><p class="rating-number">9.0</p></div>
-  <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
-  <h3 class="movie-title">Film Title</h3>
-  <p class="movie-category">Cat1, Cat2</p>
-</div>
