Add "Last activity" section
End of first part (HTML and CSS)

--- a/index.html
+++ b/index.html
@@ -39,34 +39,34 @@
         </div>
 
         <!-- ACTIVITY 1-->
-        <!-- <div class="activity-container">
+        <div class="activity-container">
           <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
           <div class="activity-info">
-            <p class="user-nickname">User Nickname</p>
-            <p class="user-activity">wants to be your friend</p>
+            <span class="user-nickname">User Nickname</span>
+            <span class="user-activity">wants to be your friend</span>
             <p class="activity-time">32 minutes ago</p>
           </div>
-        </div> -->
+        </div>
 
         <!-- ACTIVITY 2-->
-        <!-- <div class="activity-container">
+        <div class="activity-container">
           <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
           <div class="activity-info">
-            <p class="user-nickname">User Nickname</p>
-            <p class="user-activity">has recommended you: <span class="activity-movie-title">Jurassic World</span> </p>
+            <span class="user-nickname">User Nickname</span>
+            <span class="user-activity">has recommended you: <span class="activity-movie-title">Jurassic World</span> </span>
             <p class="activity-time">13 hours ago</p>
           </div>
-        </div> -->
+        </div>
 
         <!-- ACTIVITY 3-->
-        <!-- <div class="activity-container">
+        <div class="activity-container">
           <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
           <div class="activity-info">
-            <p class="user-nickname">User Nickname</p>
-            <p class="user-activity">has recommended you <span class="activity-movie-title">Gravity</span> </p>
-            <p class="activity-time">32 minutes ago</p>
+            <span class="user-nickname">User Nickname</span>
+            <span class="user-activity">has recommended you <span class="activity-movie-title">Gravity</span> </span>
+            <p class="activity-time">2 days ago</p>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </div>
@@ -80,7 +80,7 @@
           <div id="movie1" class="cover-container">
             <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
-            <h3 class="movie-title">Game of Throns</h3>
+            <h3 class="movie-title">Game of Thrones</h3>
             <p class="movie-category">Morte, Sesso, Draghi</p>
           </div>
         </div>
@@ -127,7 +127,7 @@
           <div id="movie6" class="cover-container">
             <div class="movie-rating"><p class="rating-number">8.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie6.jpg" alt="movie 6"></a>
-            <h3 class="movie-title">Breaking Bed</h3>
+            <h3 class="movie-title">Breaking Bad</h3>
             <p class="movie-category">Droga, CENDODIGIODDOOO</p>
           </div>
         </div>
