Add media query
It doesn't works properly (915px, 1120px and 1355px).

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     <!-- MAIN CONTENT -->
     <div id="content-view">
       <h2 id="content-title">New Releases</h2>
-      <div class="row">
+      <!-- <div class="row"> -->
 
         <div class="col-1">
           <div id="movie1" class="cover-container">
             <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
             <h3 class="movie-title">Game of Thrones</h3>
-            <p class="movie-category">Morte, Sesso, Draghi</p>
+            <p class="movie-category">Fantasy, Action, Medieval</p>
           </div>
         </div>
 
@@ -90,7 +90,7 @@
             <div class="movie-rating"><p class="rating-number">7.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie2.jpg" alt="movie 2"></a>
             <h3 class="movie-title">Titanic</h3>
-            <p class="movie-category">Ghiaccio, Nave, Schettino</p>
+            <p class="movie-category">Romantic, Drama</p>
           </div>
         </div>
 
@@ -99,7 +99,7 @@
             <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie3.jpg" alt="movie 3"></a>
             <h3 class="movie-title">Matrix</h3>
-            <p class="movie-category">Mr. Smith, Pillola Rossa o Pillola Blu?</p>
+            <p class="movie-category">Sci-fi, Action</p>
           </div>
         </div>
 
@@ -108,7 +108,7 @@
             <div class="movie-rating"><p class="rating-number">9.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie4.jpg" alt="movie 4"></a>
             <h3 class="movie-title">Interstellar</h3>
-            <p class="movie-category">TOP, TOPx2</p>
+            <p class="movie-category">Adventure, Sci-fi</p>
           </div>
         </div>
 
@@ -117,18 +117,18 @@
             <div class="movie-rating"><p class="rating-number">9.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie5.jpg" alt="movie 5"></a>
             <h3 class="movie-title">MR. ROBOT</h3>
-            <p class="movie-category">SUPER TOP, SUPER TOP x2</p>
+            <p class="movie-category">Techno thriller, Drama, Psychological</p>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
 
-      <div class="row">
+      <!-- <div class="row"> -->
         <div class="col-1">
           <div id="movie6" class="cover-container">
             <div class="movie-rating"><p class="rating-number">8.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie6.jpg" alt="movie 6"></a>
             <h3 class="movie-title">Breaking Bad</h3>
-            <p class="movie-category">Droga, CENDODIGIODDOOO</p>
+            <p class="movie-category">Drama, Thriller, Black comedy </p>
           </div>
         </div>
 
@@ -137,7 +137,7 @@
             <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie7.jpg" alt="movie 7"></a>
             <h3 class="movie-title">Sherlock</h3>
-            <p class="movie-category">Investigatore, Drogato</p>
+            <p class="movie-category">Detective fiction, Mistery</p>
           </div>
         </div>
 
@@ -146,7 +146,7 @@
             <div class="movie-rating"><p class="rating-number">7.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie8.jpg" alt="movie 8"></a>
             <h3 class="movie-title">Ant-Man</h3>
-            <p class="movie-category">Formiche</p>
+            <p class="movie-category">Sci-fi, Adventure</p>
           </div>
         </div>
 
@@ -155,7 +155,7 @@
             <div class="movie-rating"><p class="rating-number">7.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie9.jpg" alt="movie 9"></a>
             <h3 class="movie-title">Terminator</h3>
-            <p class="movie-category">Robot, Metallo</p>
+            <p class="movie-category">Thriller, Sci-fi, Action</p>
           </div>
         </div>
 
@@ -164,11 +164,11 @@
             <div class="movie-rating"><p class="rating-number">6.5</p></div>
             <a href="#"><img class="movie-image" src="img/movie10.jpg" alt="movie 10"></a>
             <h3 class="movie-title">Justice League</h3>
-            <p class="movie-category">Non trovavo altre immagini, Jason Momoa</p>
+            <p class="movie-category">Adventure, Action, Sci-fi, Superheroes</p>
           </div>
         </div>
 
-      </div>
+      <!-- </div> -->
     </div>
 
 
