--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="top-nav-bar">
       <div id="logo-top">MOVIENET</div>
       <div id="top-nav-body">
-        <input type="text" id="nav-search" placeholder="Film title ...">
+        <input type="text" class="nav-search" placeholder="Film title ...">
         <div class="user-profile-info">
           <p class="user-nickname">User Nickname</p>
           <div class="photo-user" style="background: url('img/profile_img.jpg');"></div>
@@ -22,7 +22,8 @@
     <!-- SIDE MENU -->
     <div id="side-menu">
       <div class="menu-list">
-        <div class="menu-voice active">New Releases</div>
+        <div class="menu-voice active">Home</div>
+        <div class="menu-voice">New Releases</div>
         <div class="menu-voice">Trending</div>
         <div class="menu-voice">Coming Soon</div>
         <div class="menu-voice">Favourites</div>
@@ -73,104 +74,24 @@
 
     <!-- MAIN CONTENT -->
     <div id="content-view">
-      <h2 id="content-title">New Releases</h2>
-      <!-- <div class="row"> -->
 
-        <div class="col-1">
+      <div id="main-search">
+        <h3 id="search-title">Enter Film title to search</h3>
+        <input type="text" class="nav-search" placeholder="Film title ...">
+      </div>
+
+        <!-- <div class="col-1">
           <div id="movie1" class="cover-container">
             <div class="movie-rating"><p class="rating-number">9.0</p></div>
             <a href="#"><img class="movie-image" src="img/movie1.jpg" alt="movie 1"></a>
             <h3 class="movie-title">Game of Thrones</h3>
             <p class="movie-category">Fantasy, Action, Medieval</p>
           </div>
-        </div>
+        </div> -->
 
-        <div class="col-1">
-          <div id="movie2" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">7.0</p></div>
-            <a href="#"><img class="movie-image" src="img/movie2.jpg" alt="movie 2"></a>
-            <h3 class="movie-title">Titanic</h3>
-            <p class="movie-category">Romantic, Drama</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie3" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">9.0</p></div>
-            <a href="#"><img class="movie-image" src="img/movie3.jpg" alt="movie 3"></a>
-            <h3 class="movie-title">Matrix</h3>
-            <p class="movie-category">Sci-fi, Action</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie4" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">9.5</p></div>
-            <a href="#"><img class="movie-image" src="img/movie4.jpg" alt="movie 4"></a>
-            <h3 class="movie-title">Interstellar</h3>
-            <p class="movie-category">Adventure, Sci-fi</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie5" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">9.5</p></div>
-            <a href="#"><img class="movie-image" src="img/movie5.jpg" alt="movie 5"></a>
-            <h3 class="movie-title">MR. ROBOT</h3>
-            <p class="movie-category">Techno thriller, Drama, Psychological</p>
-          </div>
-        </div>
-      <!-- </div> -->
-
-      <!-- <div class="row"> -->
-        <div class="col-1">
-          <div id="movie6" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">8.0</p></div>
-            <a href="#"><img class="movie-image" src="img/movie6.jpg" alt="movie 6"></a>
-            <h3 class="movie-title">Breaking Bad</h3>
-            <p class="movie-category">Drama, Thriller, Black comedy </p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie7" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">9.0</p></div>
-            <a href="#"><img class="movie-image" src="img/movie7.jpg" alt="movie 7"></a>
-            <h3 class="movie-title">Sherlock</h3>
-            <p class="movie-category">Detective fiction, Mistery</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie8" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">7.0</p></div>
-            <a href="#"><img class="movie-image" src="img/movie8.jpg" alt="movie 8"></a>
-            <h3 class="movie-title">Ant-Man</h3>
-            <p class="movie-category">Sci-fi, Adventure</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie9" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">7.5</p></div>
-            <a href="#"><img class="movie-image" src="img/movie9.jpg" alt="movie 9"></a>
-            <h3 class="movie-title">Terminator</h3>
-            <p class="movie-category">Thriller, Sci-fi, Action</p>
-          </div>
-        </div>
-
-        <div class="col-1">
-          <div id="movie10" class="cover-container">
-            <div class="movie-rating"><p class="rating-number">6.5</p></div>
-            <a href="#"><img class="movie-image" src="img/movie10.jpg" alt="movie 10"></a>
-            <h3 class="movie-title">Justice League</h3>
-            <p class="movie-category">Adventure, Action, Sci-fi, Superheroes</p>
-          </div>
-        </div>
-
-      <!-- </div> -->
     </div>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
